# raytrace

./: .gitignore  LICENSE  NOTES.md  README.md  args.c++  args.h  bitmap.c++  bitmap.h  bmp-format.h  camera.c++  camera.h  color.c++  color.h  gradient-test.c++  hittable-list.c++  hittable-list.h  hittable.h  interval.c++  interval.h  material.c++  material.h  meson.build  meson_options.txt  ppm-example.c++  print-line-counter.h  quirks.c  quirks.c++  quirks.h  raytracer.c++  render-example.c++  rtweekend.h  sphere.c++  sphere.h  utils.h  vec3.h  win-fix.c  win-fix.h
arch/: alloca.h  endian.h
arch/win/: raytracer.exe.manifest  raytracer.rc
include/: camera.h  material.h  meson.build  sphere.h
include/rt/: args.h  bitmap.h  camera.h  color.h  hittable-list.h  hittable.h  interval.h  material.h  quirks.h  ray.h  sphere.h  utils.h  vec3.h
lib/: args.c++  bitmap.c++  camera.c++  hittable-list.c++  interval.c++  material.c++  meson.build  quirks.c++  sphere.c++
old/: ppm-example-old.c++
src/: gradient-test.c++  raytracer.c++
subprojects/: libwebp.wrap
