option('png', type: 'feature', description: 'Enable PNG support (via libpng)')
option('jpeg', type: 'feature', description: 'Enable JPEG support (via libjpeg-turbo)')
option('turbojpeg', type: 'feature', description: 'Enable JPEG support (via TurboJPEG, preferred over libjpeg)')
option('webp', type: 'feature', description: 'Enable WebP lossless support (via libwebp)')
